ocaml/testsuite/tests/functor-unit/illegal-parameter-usage/use_param.ml
let () = print_int Param.v
